# portfolio_project

./: .gitignore  README.md  alembic.ini  app.py  database.py  main.py  portfolio.db  portfolio.py  pyproject.toml  stock.py
alembic/: env.py
alembic/versions/: 8691331cac5d_init_clean.py
app/: app.py  database.py
models/: chat_history.py  prediction.py  stocks.py  users.py
schemas/: stock.py  user.py
utils/: decorators.py  fetch_data.py
