[project]
name = "portfolio-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "alembic>=1.17.1",
    "aiosqlite>=0.21.0",
]
